kubernetes/main/apps/networking/traefik/external/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-external
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-external-networking
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            # http3
            - port: "8443"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
    # forwardAuth replies from same-node auth backends miss CT reverse-xlate
    # (socketLB hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: security
  egress:
    # reverse proxy: backends on arbitrary ports across namespaces
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
